infra/cdk.out/MiniJira-Network.template.json
{
 "Resources": {
  "Vpc8378EB38": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.20.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Course",
      "Value": "cloud-computing-s26"
     },
     {
      "Key": "Name",
      "Value": "MiniJira-Network/Vpc"
     },
     {
      "Key": "Project",
      "Value": "mini-jira"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "MiniJira-Network/Vpc/Resource"
   }
  },
  "VpcappSubnet1SubnetAE489B2F": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1a",
    "CidrBlock": "10.20.0.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "app"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Course",
      "Value": "cloud-computing-s26"
     },
     {
      "Key": "Name",
      "Value": "MiniJira-Network/Vpc/appSubnet1"
     },
     {
      "Key": "Project",
      "Value": "mini-jira"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MiniJira-Network/Vpc/appSubnet1/Subnet"
   }
  },
  "VpcappSubnet1RouteTable072E8E09": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Course",
      "Value": "cloud-computing-s26"
     },
     {
      "Key": "Name",
      "Value": "MiniJira-Network/Vpc/appSubnet1"
     },
     {
      "Key": "Project",
      "Value": "mini-jira"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MiniJira-Network/Vpc/appSubnet1/RouteTable"
   }
  },
  "VpcappSubnet1RouteTableAssociation168BF781": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "VpcappSubnet1RouteTable072E8E09"
    },
    "SubnetId": {
     "Ref": "VpcappSubnet1SubnetAE489B2F"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MiniJira-Network/Vpc/appSubnet1/RouteTableAssociation"
   }
  },
  "VpcappSubnet1DefaultRoute64294A8F": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "VpcIGWD7BA715C"
    },
    "RouteTableId": {
     "Ref": "VpcappSubnet1RouteTable072E8E09"
    }
   },
   "DependsOn": [
    "VpcVPCGWBF912B6E"
   ],
   "Metadata": {
    "aws:cdk:path": "MiniJira-Network/Vpc/appSubnet1/DefaultRoute"
   }
  },
  "VpcappSubnet2Subnet2449FB56": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1b",
    "CidrBlock": "10.20.1.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "app"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Course",
      "Value": "cloud-computing-s26"
     },
     {
      "Key": "Name",
      "Value": "MiniJira-Network/Vpc/appSubnet2"
     },
     {
      "Key": "Project",
      "Value": "mini-jira"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MiniJira-Network/Vpc/appSubnet2/Subnet"
   }
  },
  "VpcappSubnet2RouteTableB76BFC59": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Course",
      "Value": "cloud-computing-s26"
     },
     {
      "Key": "Name",
      "Value": "MiniJira-Network/Vpc/appSubnet2"
     },
     {
      "Key": "Project",
      "Value": "mini-jira"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MiniJira-Network/Vpc/appSubnet2/RouteTable"
   }
  },
  "VpcappSubnet2RouteTableAssociation81E96A75": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "VpcappSubnet2RouteTableB76BFC59"
    },
    "SubnetId": {
     "Ref": "VpcappSubnet2Subnet2449FB56"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MiniJira-Network/Vpc/appSubnet2/RouteTableAssociation"
   }
  },
  "VpcappSubnet2DefaultRouteEBCCC1EA": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "VpcIGWD7BA715C"
    },
    "RouteTableId": {
     "Ref": "VpcappSubnet2RouteTableB76BFC59"
    }
   },
   "DependsOn": [
    "VpcVPCGWBF912B6E"
   ],
   "Metadata": {
    "aws:cdk:path": "MiniJira-Network/Vpc/appSubnet2/DefaultRoute"
   }
  },
  "VpcIGWD7BA715C": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Course",
      "Value": "cloud-computing-s26"
     },
     {
      "Key": "Name",
      "Value": "MiniJira-Network/Vpc"
     },
     {
      "Key": "Project",
      "Value": "mini-jira"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "MiniJira-Network/Vpc/IGW"
   }
  },
  "VpcVPCGWBF912B6E": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "VpcIGWD7BA715C"
    },
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "MiniJira-Network/Vpc/VPCGW"
   }
  },
  "VpcRestrictDefaultSecurityGroupCustomResourceC73DA2BE": {
   "Type": "Custom::VpcRestrictDefaultSG",
   "Properties": {
    "ServiceToken": {
     "Fn::GetAtt": [
      "CustomVpcRestrictDefaultSGCustomResourceProviderHandlerDC833E5E",
      "Arn"
     ]
    },
    "DefaultSecurityGroupId": {
     "Fn::GetAtt": [
      "Vpc8378EB38",
      "DefaultSecurityGroup"
     ]
    },
    "Account": "839629614250"
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "MiniJira-Network/Vpc/RestrictDefaultSecurityGroupCustomResource/Default"
   }
  },
  "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Version": "2012-10-17",
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "lambda.amazonaws.com"
       }
      }
     ]
    },
    "ManagedPolicyArns": [
     {
      "Fn::Sub": "arn:${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
     }
    ],
    "Policies": [
     {
      "PolicyName": "Inline",
      "PolicyDocument": {
       "Version": "2012-10-17",
       "Statement": [
        {
         "Effect": "Allow",
         "Action": [
          "ec2:AuthorizeSecurityGroupIngress",
          "ec2:AuthorizeSecurityGroupEgress",
          "ec2:RevokeSecurityGroupIngress",
          "ec2:RevokeSecurityGroupEgress"
         ],
         "Resource": [
          {
           "Fn::Join": [
            "",
            [
             "arn:aws:ec2:us-east-1:839629614250:security-group/",
             {
              "Fn::GetAtt": [
               "Vpc8378EB38",
               "DefaultSecurityGroup"
              ]
             }
            ]
           ]
          }
         ]
        }
       ]
      }
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "MiniJira-Network/Custom::VpcRestrictDefaultSGCustomResourceProvider/Role"
   }
  },
  "CustomVpcRestrictDefaultSGCustomResourceProviderHandlerDC833E5E": {
   "Type": "AWS::Lambda::Function",
   "Properties": {
    "Code": {
     "S3Bucket": "cdk-hnb659fds-assets-839629614250-us-east-1",
     "S3Key": "7fa1e366ee8a9ded01fc355f704cff92bfd179574e6f9cfee800a3541df1b200.zip"
    },
    "Timeout": 900,
    "MemorySize": 128,
    "Handler": "__entrypoint__.handler",
    "Role": {
     "Fn::GetAtt": [
      "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0",
      "Arn"
     ]
    },
    "Runtime": "nodejs22.x",
    "Description": "Lambda function for removing all inbound/outbound rules from the VPC default security group"
   },
   "DependsOn": [
    "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0"
   ],
   "Metadata": {
    "aws:cdk:path": "MiniJira-Network/Custom::VpcRestrictDefaultSGCustomResourceProvider/Handler",
    "aws:asset:path": "asset.7fa1e366ee8a9ded01fc355f704cff92bfd179574e6f9cfee800a3541df1b200",
    "aws:asset:property": "Code"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/3WNwQ6CQAxEv8X7sirRD0AOxpMEjFdTlqpV6JptV2KM/26IRk6eZua1k0ltulza2QR6SVxzTVqq7bNScFcDvRzQpfa5vzmTH3lf5KaIdUuuijWjDmx0pY+KO6hbHPnIMhHvCJQ8/54Hs2HFwKhrUOzh8Z35pkwV3LlD1pcpUXwMDk0eRX03xiP/ORXB36nBsAJBk4mgVgon4tPQ2Ua9RX0Z9g3ai0zv6cLOF3Y+uQhREiIrdWjLj74BbPegMiQBAAA="
   },
   "Metadata": {
    "aws:cdk:path": "MiniJira-Network/CDKMetadata/Default"
   }
  }
 },
 "Outputs": {
  "VpcId": {
   "Value": {
    "Ref": "Vpc8378EB38"
   },
   "Export": {
    "Name": "MiniJira-VpcId"
   }
  },
  "ExportsOutputRefVpc8378EB38272D6E3A": {
   "Value": {
    "Ref": "Vpc8378EB38"
   },
   "Export": {
    "Name": "MiniJira-Network:ExportsOutputRefVpc8378EB38272D6E3A"
   }
  },
  "ExportsOutputRefVpcappSubnet1SubnetAE489B2F386690C8": {
   "Value": {
    "Ref": "VpcappSubnet1SubnetAE489B2F"
   },
   "Export": {
    "Name": "MiniJira-Network:ExportsOutputRefVpcappSubnet1SubnetAE489B2F386690C8"
   }
  },
  "ExportsOutputRefVpcappSubnet2Subnet2449FB56F27A422B": {
   "Value": {
    "Ref": "VpcappSubnet2Subnet2449FB56"
   },
   "Export": {
    "Name": "MiniJira-Network:ExportsOutputRefVpcappSubnet2Subnet2449FB56F27A422B"
   }
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
